todolist optimization + htmlspecialchars + css -DOING

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,6 +28,15 @@ h1, p {
     margin-bottom : 1 rem;
 }
 
+h1 {
+    margin-bottom: 1rem;
+}
+
+ul {
+    padding: 0;
+    list-style-type: none;
+}
+
 /* Container */
 
 .container {
@@ -58,11 +67,21 @@ h1, p {
     cursor: pointer;
     border-radius: 3px;
     margin: 0 5px;
+    box-shadow: var(--box-shadow);
 }
 
-.btn {
+.btn-primary {
     background-color: var(--primary);
     color: var(--text-color-light);
+}
+
+.btn-danger {
+    background-color: var(--danger);
+    color: var(--text-color-light);
+}
+
+btn-small {
+    padding: 5px 10px;
 }
 
 header {
@@ -125,4 +144,21 @@ footer {
     border-radius: 3px;
     padding: 10px 15px;
 
+}
+
+.todo-item {
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    margin-bottom: 0.5rem;
+    padding: 0.3rem 1.5rem;
+}
+
+.todo-item:nth-child(odd) {
+    background-color: var(--background-light);
+}
+
+.todo-name {
+    flex: 1;
+    margin-right: 0.2rem;
 }
